{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 223,
  "lineage": "b823d756-306c-4992-43d5-87dea3fc9cb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ef2c414e9c724cf",
            "arn": "arn:aws:ec2:us-east-1:871576120016:elastic-ip/eipalloc-01ef2c414e9c724cf",
            "association_id": "eipassoc-00d4e6ca3ffa06f0e",
            "domain": "vpc",
            "id": "eipalloc-01ef2c414e9c724cf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-053b273f591ddec3f",
            "private_dns": "ip-10-0-0-173.ec2.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-98-83-122-120.compute-1.amazonaws.com",
            "public_ip": "98.83.122.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP-AZ1"
            },
            "tags_all": {
              "Name": "NAT-EIP-AZ1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36e4fa663959b9e",
            "arn": "arn:aws:ec2:us-east-1:871576120016:elastic-ip/eipalloc-0e36e4fa663959b9e",
            "association_id": "eipassoc-0980c442fe3282d58",
            "domain": "vpc",
            "id": "eipalloc-0e36e4fa663959b9e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9cac314d8baf6f8",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-3-224-121-170.compute-1.amazonaws.com",
            "public_ip": "3.224.121.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-EIP-AZ2"
            },
            "tags_all": {
              "Name": "NAT-EIP-AZ2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:871576120016:instance/i-08f72a3e59d80ddf7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f72a3e59d80ddf7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0387a8c2988374595",
            "private_dns": "ip-10-0-0-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.232",
            "public_ip": "34.205.8.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d24af3f6e59f9513",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05983a6123d3974cf",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae2fade2122cd404"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:871576120016:instance/i-02cee7eb0438aa0c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cee7eb0438aa0c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028405b2b1d1306be",
            "private_dns": "ip-10-0-2-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa8ae38e628c52e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b3f064f6a200886",
            "tags": {
              "Name": "Web-Application"
            },
            "tags_all": {
              "Name": "Web-Application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07aa96d1aa3343439"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql_primary",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_application2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:871576120016:instance/i-05c68d673fea018ab",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c68d673fea018ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092c337b94a41fc9d",
            "private_dns": "ip-10-0-3-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082c8a81b36a4111f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f74b3b21e556069",
            "tags": {
              "Name": "Web-Application2"
            },
            "tags_all": {
              "Name": "Web-Application2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07aa96d1aa3343439"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql_primary",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:internet-gateway/igw-0073d76a49a2d52b0",
            "id": "igw-0073d76a49a2d52b0",
            "owner_id": "871576120016",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:loadbalancer/app/my-load-balancer/e44a9d5fff0aa31f",
            "arn_suffix": "app/my-load-balancer/e44a9d5fff0aa31f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-load-balancer-2081498663.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:871576120016:loadbalancer/app/my-load-balancer/e44a9d5fff0aa31f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b7631f4cb3f6b90c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0385efacf6ae8b384"
              },
              {
                "subnet_id": "subnet-05983a6123d3974cf"
              }
            ],
            "subnets": [
              "subnet-0385efacf6ae8b384",
              "subnet-05983a6123d3974cf"
            ],
            "tags": {
              "Name": "my-load-balancer"
            },
            "tags_all": {
              "Name": "my-load-balancer"
            },
            "vpc_id": "vpc-060944636b7144212",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:listener/app/my-load-balancer/e44a9d5fff0aa31f/7e80697b31ffcca7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871576120016:listener/app/my-load-balancer/e44a9d5fff0aa31f/7e80697b31ffcca7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:loadbalancer/app/my-load-balancer/e44a9d5fff0aa31f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc",
            "arn_suffix": "targetgroup/my-target-group/f4e57d94cfdc0fdc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/wp-admin/install.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:871576120016:loadbalancer/app/my-load-balancer/e44a9d5fff0aa31f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-target-group"
            },
            "tags_all": {
              "Name": "my-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc-20260510113546798800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc",
            "target_id": "i-02cee7eb0438aa0c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql_primary",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_instance.web_application",
            "aws_lb_target_group.my_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc-20260510113546744700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871576120016:targetgroup/my-target-group/f4e57d94cfdc0fdc",
            "target_id": "i-05c68d673fea018ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql_primary",
            "aws_db_subnet_group.my_db_subnet_group",
            "aws_instance.web_application2",
            "aws_lb_target_group.my_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ef2c414e9c724cf",
            "association_id": "eipassoc-00d4e6ca3ffa06f0e",
            "connectivity_type": "public",
            "id": "nat-090dd2192a7386883",
            "network_interface_id": "eni-053b273f591ddec3f",
            "private_ip": "10.0.0.173",
            "public_ip": "98.83.122.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05983a6123d3974cf",
            "tags": {
              "Name": "NAT-Gateway-AZ1"
            },
            "tags_all": {
              "Name": "NAT-Gateway-AZ1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36e4fa663959b9e",
            "association_id": "eipassoc-0980c442fe3282d58",
            "connectivity_type": "public",
            "id": "nat-0e3b4f21bb4fdab10",
            "network_interface_id": "eni-0e9cac314d8baf6f8",
            "private_ip": "10.0.1.102",
            "public_ip": "3.224.121.170",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0385efacf6ae8b384",
            "tags": {
              "Name": "NAT-Gateway-AZ2"
            },
            "tags_all": {
              "Name": "NAT-Gateway-AZ2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:route-table/rtb-0c11b63df0af8d898",
            "id": "rtb-0c11b63df0af8d898",
            "owner_id": "871576120016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090dd2192a7386883",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table-AZ1"
            },
            "tags_all": {
              "Name": "Private-Route-Table-AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:route-table/rtb-038918846bab000e1",
            "id": "rtb-038918846bab000e1",
            "owner_id": "871576120016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e3b4f21bb4fdab10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table-AZ2"
            },
            "tags_all": {
              "Name": "Private-Route-Table-AZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:route-table/rtb-01cfe8c035483551e",
            "id": "rtb-01cfe8c035483551e",
            "owner_id": "871576120016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0073d76a49a2d52b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04205ff77506912fc",
            "route_table_id": "rtb-0c11b63df0af8d898",
            "subnet_id": "subnet-09b3f064f6a200886"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042af91116517722a",
            "route_table_id": "rtb-038918846bab000e1",
            "subnet_id": "subnet-06f74b3b21e556069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ffab3c51d1c32c9",
            "route_table_id": "rtb-01cfe8c035483551e",
            "subnet_id": "subnet-05983a6123d3974cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fbc116f5d6d97af",
            "route_table_id": "rtb-01cfe8c035483551e",
            "subnet_id": "subnet-0385efacf6ae8b384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:security-group/sg-0b7631f4cb3f6b90c",
            "description": "Security Group for Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7631f4cb3f6b90c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "871576120016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-Security-Group"
            },
            "tags_all": {
              "Name": "ALB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:security-group/sg-0ae2fade2122cd404",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae2fade2122cd404",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "871576120016",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:security-group/sg-0f390b963132ba551",
            "description": "Security Group for RDS Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f390b963132ba551",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07aa96d1aa3343439"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "871576120016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-Security-Group"
            },
            "tags_all": {
              "Name": "DB-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:security-group/sg-07aa96d1aa3343439",
            "description": "Security Group for EC2 Web Application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aa96d1aa3343439",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7631f4cb3f6b90c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from Load Balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7631f4cb3f6b90c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae2fade2122cd404"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "871576120016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-Security-Group"
            },
            "tags_all": {
              "Name": "EC2-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-060944636b7144212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:subnet/subnet-09b3f064f6a200886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b3f064f6a200886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871576120016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ1"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ1"
            },
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:subnet/subnet-06f74b3b21e556069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f74b3b21e556069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871576120016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-AZ2"
            },
            "tags_all": {
              "Name": "Private-Subnet-AZ2"
            },
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:subnet/subnet-05983a6123d3974cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05983a6123d3974cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871576120016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ1"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ1"
            },
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:subnet/subnet-0385efacf6ae8b384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0385efacf6ae8b384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871576120016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-AZ2"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ2"
            },
            "vpc_id": "vpc-060944636b7144212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871576120016:vpc/vpc-060944636b7144212",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08349cc150dced4e2",
            "default_route_table_id": "rtb-055a36dda310edc0c",
            "default_security_group_id": "sg-099c2f3f1530f2dce",
            "dhcp_options_id": "dopt-08b056ccfdfa9b648",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060944636b7144212",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055a36dda310edc0c",
            "owner_id": "871576120016",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}